# catcierge

./: .droneio.sh  .gitignore  .gitmodules  .pkgr.yml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  build_userland.sh  catcierge.c  catcierge.h  catcierge_args.c  catcierge_args.h  catcierge_common_matcher.c  catcierge_common_matcher.h  catcierge_config.h.in  catcierge_fsm.c  catcierge_fsm.h  catcierge_fsm_tester.c  catcierge_gpio.c  catcierge_grabber.c  catcierge_grabber2.c  catcierge_haar_matcher.c  catcierge_haar_matcher.h  catcierge_haar_wrapper.cpp  catcierge_haar_wrapper.h  catcierge_log.c  catcierge_log.h  catcierge_matcher.c  catcierge_matcher.h  catcierge_output.c  catcierge_output.h  catcierge_output_types.h  catcierge_platform.h  catcierge_rfid.c  catcierge_rfid.h  catcierge_rfid_tester.c  catcierge_strftime.c  catcierge_strftime.h  (+30 more)
alini/: alini.c  alini.h
cmake/: CodeCoverage.cmake  CoverallsClear.cmake  CoverallsGcovUpload.cmake  CoverallsGenerateGcov.cmake  FindCZMQ.cmake  FindRaspberryPi.cmake  catcierge-example.cfg.in  catcierge.cfg.in  catcierge.service.in  catcierge_rpi_gpio.service.in  catcierge_rpi_gpio.sh.in
cmake/debian/: postinst  postinst.in
doc/: README.md  catcierge_state.tex
extra/: Dockerfile  catcierge-compose.py  catcierge-sendmail-new.py  catcierge-sendmail.py  catcierge-twitter.py  catcierge.xml  catcierge_importer.py  catcierge_rand_fsm_tester.py
extra/fonts/Asana-Math/: FontLog.txt
extra/templates/: [event]event_%time%.json  [match_group_done]match_group_%time%.json  [save_imgs]save_images_%time%.json  [state_change]state_change_%time%.json  compose_script.sh.in  event.json  match_group.json  match_group_done_full.json  state_change.json
prototype/: find_backlight.py  higgs.py
raspicam_cv/: RaspiCamCV.c  RaspiCamCV.h  RaspiCamTest.c
src/: cargo_ini.c  cargo_ini.h  catcierge_args.c  catcierge_args.h  catcierge_bg_tester.c  catcierge_cargo.c  catcierge_cargo.h  catcierge_color.h  catcierge_config.h.in  catcierge_events.h  catcierge_fsm.c  catcierge_fsm.h  catcierge_fsm_tester.c  catcierge_gpio.c  catcierge_gpio.h  catcierge_grabber.c  catcierge_grabber2.c  catcierge_haar_matcher.c  catcierge_haar_matcher.h  catcierge_haar_wrapper.cpp  catcierge_haar_wrapper.h  catcierge_log.c  catcierge_log.h  catcierge_matcher.c  catcierge_matcher.h  catcierge_output.c  catcierge_output.h  catcierge_output_types.h  catcierge_platform.h  catcierge_rfid.c  catcierge_rfid.h  catcierge_rfid_tester.c  catcierge_rpi_args.c  catcierge_rpi_args.h  catcierge_sigusr.c  catcierge_sigusr.h  catcierge_sigusr_types.h  catcierge_strftime.c  catcierge_strftime.h  catcierge_template_matcher.c  (+8 more)
src/alini/: alini.c  alini.h
src/raspicam_cv/: RaspiCamCV.c
test/: CMakeLists.txt  TEST_catcierge_args.c  TEST_catcierge_execute.c  TEST_catcierge_fsm.c  TEST_catcierge_fsm_consecutive_lockouts.c  TEST_catcierge_fsm_droproot.c  TEST_catcierge_fsm_haar_matcher.c  TEST_catcierge_fsm_misc.c  TEST_catcierge_fsm_rfid.c  TEST_catcierge_fsm_template_matcher.c  TEST_catcierge_matcher.c  TEST_catcierge_output.c  TEST_catcierge_rfid.c  TEST_catcierge_strftime.c  TEST_catcierge_timer.c  TEST_catcierge_util.c  TEST_sha1.c  catcierge_test_common.c  catcierge_test_common.h  catcierge_test_config.h.in  catcierge_test_helpers.c  catcierge_test_helpers.h  minunit.h
